chore: migrate images to new tags

--- a/kubernetes/apps/base/downloads/prowlarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/prowlarr/helmrelease.yaml
@@ -26,8 +26,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/joryirving/prowlarr-develop
-              tag: 1.32.2.4987@sha256:c9c1d5dbda92c940cf00e343f0ccb3e69312411a553d333ce564f427e2b3c270
+              repository: ghcr.io/joryirving/prowlarr
+              tag: 1.32.2.4987@sha256:ba3503f69e8cd2b9afdf0746136570927692efa6e5c8f0ef22ec46f110734f3c
             env:
               TZ: ${TIMEZONE}
               PROWLARR__APP__INSTANCENAME: Prowlarr
