--- a/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
@@ -27,8 +27,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/joryirving/radarr-develop
-              tag: 5.20.1.9773@sha256:65a33133e3323b01290c798f411dde22b87c95fa54848751a9e5800e1a9821e0
+              repository: ghcr.io/joryirving/radarr
+              tag: 5.20.1.9773@sha256:8acea5498553c54ceb124b74e517b062695aad2ea7ffdac858a8d3922dec0fc8
             env:
               RADARR__APP__INSTANCENAME: Radarr
               RADARR__APP__THEME: dark
