--- a/kubernetes/apps/base/downloads/readarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/readarr/helmrelease.yaml
@@ -27,8 +27,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/joryirving/readarr-develop
-              tag: 0.4.12.2753@sha256:2d2577d3c27d8892d8d886a3dcd58215b20402aee320da4914dfbd5db373cab4
+              repository: ghcr.io/joryirving/readarr
+              tag: 0.4.12.2753@sha256:d7431bad0b6c16b9cd4e19de9d6d2247741a440d59b8823ae410b7722c3ead49
             env:
               READARR__APP__INSTANCENAME: Readarr
               READARR__APP__THEME: dark
