--- a/kubernetes/apps/base/downloads/sonarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/sonarr/helmrelease.yaml
@@ -26,8 +26,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/joryirving/sonarr-develop
-              tag: 4.0.14.2938@sha256:64ec3fcfcc77e34ab970a13b9ef5fd10492834dae08d19f4ded9b323427a790e
+              repository: ghcr.io/joryirving/sonarr
+              tag: 4.0.14.2938@sha256:d0aeae47af65b462dda99a90c703154453fe442678399ef820808e655fcf5a79
             env:
               SONARR__APP__INSTANCENAME: Sonarr
               SONARR__APP__THEME: dark
