--- a/kubernetes/apps/base/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
           app:
             image:
               repository: ghcr.io/joryirving/plex
-              tag: 1.41.5.9522-a96edc606@sha256:4fde39ae549172b30cacd30825f491a4197976a30a57acaa646cd5aba3b807d8
+              tag: 1.41.5.9522@sha256:ce9623fc063f4c9c25dd92397cb401f1784603cd47a4ee2796031bd2aa4e3fde
             env:
               TZ: ${TIMEZONE}
               PLEX_ADVERTISE_URL: https://plex.${SECRET_DOMAIN}:443,http://${SVC_PLEX_ADDR}:32400
