feat: deploy lubelog psql and secretstore

--- a/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
@@ -30,5 +30,5 @@ spec:
       key: pguser-lubelog
     sourceRef:
        storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
+         kind: SecretStore
+         name: lubelog-postgres
