--- a/kubernetes/apps/base/self-hosted/lubelog/secretstore.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/secretstore.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
-  name: lubelog-postgres
+  name: lubelogger-postgres
 spec:
   provider:
     kubernetes:
