feat: deploy lubelog psql and secretstore (#3925)
* feat: deploy lubelog psql and secretstore

* chore: rename from lubelog to lubelogger

* fix: update tf workflow

--- a/kubernetes/apps/base/self-hosted/lubelogger/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelogger/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name lubelog-secret
+  name: &name lubelogger-secret
 spec:
   target:
     name: *name
@@ -11,8 +11,8 @@ spec:
       data:
         # OIDC
         OpenIDConfig__Name: authentik
-        OpenIDConfig__ClientId: "{{ .LUBELOG_CLIENT_ID }}"
-        OpenIDConfig__ClientSecret: "{{ .LUBELOG_CLIENT_SECRET }}"
+        OpenIDConfig__ClientId: "{{ .LUBELOGGER_CLIENT_ID }}"
+        OpenIDConfig__ClientSecret: "{{ .LUBELOGGER_CLIENT_SECRET }}"
         OpenIDConfig__AuthURL: https://sso.${SECRET_DOMAIN}/application/o/authorize/
         OpenIDConfig__TokenURL: https://sso.${SECRET_DOMAIN}/application/o/token/
         OpenIDConfig__RedirectURL: https://lubelog.${SECRET_DOMAIN}/Login/RemoteAuth
@@ -21,14 +21,14 @@ spec:
         POSTGRES_CONNECTION: 'Host={{ index . "pgbouncer-host" }}:{{ .port }};Username={{ .user }};Password={{ .password }};Database={{ .dbname }}'
   dataFrom:
   - extract:
-      key: lubelog
+      key: lubelogger
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
          name: onepassword
   - extract:
-      key: pguser-lubelog
+      key: lubelogger-pguser-lubelogger
     sourceRef:
        storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
+         kind: SecretStore
+         name: lubelogger-postgres
