--- a/kubernetes/apps/main/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/main/self-hosted/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   - ./actual/ks.yaml
   - ./archiveteam/ks.yaml
   - ./atuin/ks.yaml
-  # - ./lubelog/ks.yaml
+  - ./lubelogger/ks.yaml
   - ./paperless/ks.yaml
   - ./wyze-bridge/ks.yaml
