--- a/kubernetes/apps/main/self-hosted/lubelogger/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/lubelogger/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app lubelog
+  name: &app lubelogger
 spec:
   commonMetadata:
     labels:
@@ -21,7 +21,7 @@ spec:
       failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
       current: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'True')
   interval: 1h
-  path: ./kubernetes/apps/base/self-hosted/lubelog
+  path: ./kubernetes/apps/base/self-hosted/lubelogger
   postBuild:
     substitute:
       APP: *app
