--- a/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
@@ -13,8 +13,8 @@ spec:
     template:
       data:
         config.toml: |-
-            [feeds.onedr0p-containers]
-            url = "https://github.com/onedr0p/containers/commits/main/.atom"
+            [feeds.home-operations-containers]
+            url = "https://github.com/home-operations/containers/commits/main/.atom"
             interval = "10m"
             retry_limit = 5
             sink.type = "discord"
