--- a/kubernetes/apps/base/self-hosted/lubelogger/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelogger/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
         parentRefs:
-          - name: internal
+          - name: external
             namespace: kube-system
             sectionName: https
         rules:
