feat: migrate dependencies to ks

--- a/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
@@ -30,6 +30,10 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../../components/gatus/guarded
+  dependsOn:
+    - name: rook-ceph
+    - name: volsync
+      namespace: storage
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
