feat: update secret

--- a/kubernetes/apps/base/self-hosted/lubelogger/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelogger/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
         OpenIDConfig__ClientSecret: "{{ .LUBELOGGER_CLIENT_SECRET }}"
         OpenIDConfig__AuthURL: https://sso.${SECRET_DOMAIN}/application/o/authorize/
         OpenIDConfig__TokenURL: https://sso.${SECRET_DOMAIN}/application/o/token/
-        OpenIDConfig__RedirectURL: https://lubelog.${SECRET_DOMAIN}/Login/RemoteAuth
+        OpenIDConfig__RedirectURL: https://lubelogger.${SECRET_DOMAIN}/Login/RemoteAuth
         OpenIDConfig__Scope: email
         # Database
         POSTGRES_CONNECTION: 'Host={{ index . "pgbouncer-host" }}:{{ .port }};Username={{ .user }};Password={{ .password }};Database={{ .dbname }}'
