--- a/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -21,7 +21,7 @@ spec:
     controllers:
       system-upgrade-controller:
         strategy: RollingUpdate
-        replicas: ${REPLICAS:=1}
+        replicas: ${REPLICAS:="1"}
         containers:
           app:
             image:
