feat: you need at least one substitution

--- a/kubernetes/apps/test/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/test/kube-tools/system-upgrade-controller/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/kube-tools/system-upgrade-controller/app
+  postBuild:
+    substitute:
+      REPLICAS: "1"
   prune: true
   retryInterval: 2m
   sourceRef:
