--- a/kubernetes/apps/utility/kube-tools/fstrim/ks.yaml
+++ b/kubernetes/apps/utility/kube-tools/fstrim/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/kube-tools/fstrim
+  postBuild:
+    substitute:
+      PARALLELISM: "1" #Match node count
   prune: true
   retryInterval: 2m
   sourceRef:
