--- a/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     controllers:
       system-upgrade-controller:
         strategy: RollingUpdate
-        replicas: ${REPLICAS:="1"}
+        replicas: ${REPLICAS:=1}
         containers:
           app:
             image:
