feat: deploy secret

--- a/kubernetes/apps/utility/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/utility/self-hosted/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: self-hosted
 components:
   - ../../../components/common
 resources:
+  - ./acars/externalsecret.yaml
   - ./acars/ks.yaml
   - ./archiveteam/ks.yaml
   - ./free-game-notifier/ks.yaml
