feat: add cluster for secrets

--- a/kubernetes/apps/main/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/main/flux-system/addons/ks.yaml
@@ -12,6 +12,7 @@ spec:
   path: ./kubernetes/apps/base/flux-system/addons
   postBuild:
     substitute:
+      CLUSTER: main
       SUBDOMAIN: flux-webhook
   prune: true
   retryInterval: 2m
