--- a/kubernetes/apps/main/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/main/network/cloudflare-tunnel/ks.yaml
@@ -13,6 +13,7 @@ spec:
   postBuild:
     substitute:
       CLOUDFLARED_TUNNEL_ID: 85be482d-5cf9-4ee5-a9a0-c489e3dd6188
+      CLUSTER: main
       EXTERNAL_DOMAIN: external
       REPLICAS: "2"
   prune: true
