--- a/kubernetes/apps/test/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/test/network/cloudflare-tunnel/ks.yaml
@@ -13,6 +13,7 @@ spec:
   postBuild:
     substitute:
       CLOUDFLARED_TUNNEL_ID: 51921033-9888-483b-aa37-1572275acd11
+      CLUSTER: test
       EXTERNAL_DOMAIN: external-test
   prune: true
   retryInterval: 2m
