--- a/kubernetes/apps/utility/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/utility/flux-system/addons/ks.yaml
@@ -12,6 +12,7 @@ spec:
   path: ./kubernetes/apps/base/flux-system/addons
   postBuild:
     substitute:
+      CLUSTER: utility
       SUBDOMAIN: flux-webhook-utility
   prune: true
   retryInterval: 2m
