--- a/kubernetes/apps/utility/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/utility/network/cloudflare-tunnel/ks.yaml
@@ -13,6 +13,7 @@ spec:
   postBuild:
     substitute:
       CLOUDFLARED_TUNNEL_ID: 4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba
+      CLUSTER: utility
       EXTERNAL_DOMAIN: external-utility
   prune: true
   retryInterval: 2m
