--- a/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
                 cpu: 20m
                 memory: 300Mi
               limits:
-                memory: 500Mi
+                memory: 1Gi
             env:
               DOWNLOADER: LilDrunkenSmurf
               SELECTED_PROJECT: auto
