--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -88,11 +88,19 @@ spec:
           app.kubernetes.io/name: ${APP}-crunchy-postgres-backup
       repos:
         - name: repo1
+          s3: &minio
+            bucket: postgresql
+            endpoint: s3.jory.dev
+            region: ca-west-1
           schedules:
             full: "30 1 * * 0" # Sunday at 01:30
             differential: "30 1 * * 1-6" # Mon-Sat at 01:30
             incremental: "30 3-23 * * *" # Every hour except 01:30-2:30
         # - name: repo2
+        #   s3:
+        #     bucket: crunchy-pgo
+        #     endpoint: ${R2_ENDPOINT}
+        #     region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
         #   schedules:
         #     full: "30 2 * * 0" # Sunday at 02:30
         #     incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
@@ -103,6 +111,7 @@ spec:
       global: *backupFlag
       repo:
         name: repo1
+        s3: *minio
   proxy:
     pgBouncer:
       port: 5432
