--- a/kubernetes/apps/test/storage/snapshot-controller/ks.yaml
+++ b/kubernetes/apps/test/storage/snapshot-controller/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/storage/snapshot-controller
+  postBuild:
+    substitute:
+      REPLICAS: "1"
   prune: true
   retryInterval: 2m
   sourceRef:
