--- a/kubernetes/apps/utility/kube-system/coredns/ks.yaml
+++ b/kubernetes/apps/utility/kube-system/coredns/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/kube-system/coredns
+  postBuild:
+    substitute:
+      REPLICAS: "1" #Match control plane count
   prune: true
   sourceRef:
     kind: GitRepository
