feat: migrate komga to ghcr

--- a/kubernetes/apps/base/media/komga/helmrelease.yaml
+++ b/kubernetes/apps/base/media/komga/helmrelease.yaml
@@ -26,8 +26,8 @@ spec:
         containers:
           app:
             image:
-              repository: gotson/komga
-              tag: "1.21.2@sha256:ba587695d786f0e8f4de8598b8aa2785cc8c671098ef1cb624819c2bb812789c"
+              repository: ghcr.io/gotson/komga
+              tag: 1.21.2@sha256:ba587695d786f0e8f4de8598b8aa2785cc8c671098ef1cb624819c2bb812789c
             env:
               TZ: America/Edmonton
               SERVER_PORT: &port 8080
