Add plasmadash blog

--- a/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
@@ -37,6 +37,12 @@ spec:
             retry_limit = 5
             sink.type = "discord"
             sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+            [feeds.plasmadash]
+            url = "https://plasmadash.com/feed.xml"
+            interval = "10m"
+            retry_limit = 5
+            sink.type = "discord"
+            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
   dataFrom:
   - extract:
       key: discord
