chore: migrate PAL to fork

--- a/kubernetes/apps/base/media/plex/plex-auto-languages/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/plex-auto-languages/helmrelease.yaml
@@ -24,8 +24,8 @@ spec:
         containers:
           app:
             image:
-              repository: remirigal/plex-auto-languages
-              tag: v1.2.3
+              repository: ghcr.io/journeydocker/plex-auto-languages
+              tag: v1.3.7@sha256:69863f43ce12a24f1d31ff01f021def79ba13c2a0e816e59b821efbca78d3098
             env:
               TZ: America/Edmonton
               PLEX_URL: "http://plex.media.svc.cluster.local:32400"
