feat: update annotator config

--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -113,6 +113,7 @@ spec:
                 acarsFlightNumber
                 acarsFrequencyMHz
                 acarsMessageText
+              FILTER_CRITERIA_DICTIONARY_PHRASE_LENGTH_MINIMUM: "2"
               FILTER_CRITERIA_HAS_TEXT: "true"
               LOGLEVEL: debug
             envFrom:
