--- a/kubernetes/apps/base/kube-system/coredns/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/coredns/helmrelease.yaml
@@ -14,6 +14,9 @@ spec:
   url: oci://ghcr.io/coredns/charts/coredns
   verify:
     provider: cosign
+    matchOIDCIdentity:
+      - issuer: ^https://token.actions.githubusercontent.com$
+        subject: ^https://github.com/coredns/helm.*$
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
