--- a/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   name: silence-operator-crds
 
 spec:
-  interval: 1h
+  interval: 5m
   layerSelector:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
