--- a/kubernetes/clusters/utility/flux-instance/helmrelease.yaml
+++ b/kubernetes/clusters/utility/flux-instance/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   name: flux-instance
   namespace: flux-system
 spec:
-  interval: 1h
+  interval: 5m
   layerSelector:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
