--- a/kubernetes/apps/base/storage/democratic-csi/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/helmrelease.yaml
@@ -41,7 +41,9 @@ spec:
         enabled: false
       externalProvisioner:
         enabled: true
-        image: registry.k8s.io/sig-storage/csi-provisioner:v5.2.0
+        image:
+          registry: registry.k8s.io/sig-storage/csi-provisioner
+          tag: v5.2.0
         extraArgs:
           - --leader-election=false
           - --node-deployment=true
@@ -54,7 +56,9 @@ spec:
         enabled: false
       externalSnapshotter:
         enabled: true
-        image: registry.k8s.io/sig-storage/csi-snapshotter:v8.2.1
+        image:
+          registry: registry.k8s.io/sig-storage/csi-snapshotter
+          tag: v8.2.1
         extraArgs:
           - --leader-election=false
           - --node-deployment=true
@@ -86,7 +90,9 @@ spec:
           dirPermissionsGroup: 0
     node:
       driver:
-        image: democraticcsi/democratic-csi:v1.9.3
+        image:
+          registry: democraticcsi/democratic-csi
+          tag: v1.9.3
         extraVolumeMounts:
           - name: local-hostpath
             mountPath: *storagePath
@@ -97,4 +103,6 @@ spec:
             path: *storagePath
             type: DirectoryOrCreate
     csiProxy:
-      image: ghcr.io/democratic-csi/csi-grpc-proxy:v0.5.6
+      image:
+        registry: ghcr.io/democratic-csi/csi-grpc-proxy
+        tag: v0.5.6
