--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -45,7 +45,7 @@ releases:
   - name: cert-manager
     namespace: cert-manager
     atomic: true
-    chart: oci://ghcr.io/home-operations/charts-mirror/cert-manager
+    chart: oci://quay.io/jetstack/charts/cert-manager
     version: v1.17.1
     values: ['{{ requiredEnv "SHARED_APPS" }}/cert-manager/cert-manager/helm/values.yaml']
     needs: ['kube-system/coredns']
