--- a/kubernetes/apps/main/games/minecraft/ks.yaml
+++ b/kubernetes/apps/main/games/minecraft/ks.yaml
@@ -98,3 +98,30 @@ spec:
 #   targetNamespace: games
 #   timeout: 5m
 #   wait: false
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app minecraft-testcraft
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  components:
+   - ../../../../../components/volsync
+  interval: 1h
+  path: ./kubernetes/apps/base/games/minecraft/testcraft
+  postBuild:
+    substitute:
+      APP: *app
+      VOLSYNC_CAPACITY: 15Gi
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: games
+  timeout: 5m
+  wait: false
