chore: cleanup secret and reference

--- a/kubernetes/apps/base/games/minecraft/create/externalsecret.yaml
+++ b/kubernetes/apps/base/games/minecraft/create/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name minecraft-create-secret
+  name: &name minecraft-create
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
