--- a/kubernetes/apps/base/games/minecraft/create/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/create/helmrelease.yaml
@@ -102,6 +102,6 @@ spec:
         enabled: true
   valuesFrom:
   - kind: Secret
-    name: minecraft-create-secret
+    name: *app
     valuesKey: RCON_PASSWORD
     targetPath: minecraftServer.rcon.password
