--- a/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
@@ -103,6 +103,6 @@ spec:
         enabled: true
   valuesFrom:
   - kind: Secret
-    name: minecraft-takocraft-secret
+    name: *app
     valuesKey: RCON_PASSWORD
     targetPath: minecraftServer.rcon.password
