--- a/kubernetes/apps/base/games/minecraft/testcraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/testcraft/helmrelease.yaml
@@ -102,6 +102,6 @@ spec:
         enabled: true
   valuesFrom:
   - kind: Secret
-    name: testcraft-minecraft
+    name: *app
     valuesKey: RCON_PASSWORD
     targetPath: minecraftServer.rcon.password
