--- a/kubernetes/apps/base/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/vibecraft/helmrelease.yaml
@@ -108,6 +108,6 @@ spec:
         enabled: true
   valuesFrom:
   - kind: Secret
-    name: minecraft-vibecraft-secret
+    name: *app
     valuesKey: RCON_PASSWORD
     targetPath: minecraftServer.rcon.password
