--- a/kubernetes/apps/base/games/minecraft/takocraft/externalsecret.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name minecraft-takocraft-secret
+  name: &name minecraft-takocraft
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
