--- a/kubernetes/apps/base/games/minecraft/testcraft/externalsecret.yaml
+++ b/kubernetes/apps/base/games/minecraft/testcraft/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name testcraft-minecraft
+  name: &name minecraft-testcraft
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
