feat: migrate from ocirepo to helmrepo for test

--- a/kubernetes/apps/base/games/minecraft/testcraft/externalsecret.yaml
+++ b/kubernetes/apps/base/games/minecraft/testcraft/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name minecraft-testcraft
+  name: &name minecraft-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
