feat: add pvc dashboard

--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -188,11 +188,6 @@ spec:
         external-secrets:
           url: https://raw.githubusercontent.com/external-secrets/external-secrets/main/docs/snippets/dashboard.json
           datasource: Prometheus
-        zfs:
-          # renovate: depName="ZFS"
-          gnetId: 7845
-          revision: 4
-          datasource: Prometheus
       games:
         palworld:
           # renovate: depName="Palworld"
@@ -315,6 +310,12 @@ spec:
         host-overview:
           url: https://raw.githubusercontent.com/ceph/ceph/main/monitoring/ceph-mixin/dashboards_out/hosts-overview.json
           datasource: Prometheus
+        kubernetes-pvc:
+          # renovate: depName="Kubernetes PVC Stats"
+          gnetId: 23233
+          revision: 2
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         minio:
           # renovate: depName="MinIO Dashboard"
           gnetId: 13502
@@ -328,6 +329,11 @@ spec:
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
             - { name: VAR_REPLICATIONDESTNAME, value: '.*-bootstrap'}
+        zfs:
+          # renovate: depName="ZFS"
+          gnetId: 7845
+          revision: 4
+          datasource: Prometheus
       system:
         node-exporter-full:
           # renovate: depName="Node Exporter Full"
