--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -89,6 +89,7 @@ spec:
           failureDomain: host
           replicated:
             size: 3
+          enableRBDStats: true
         storageClass:
           enabled: true
           name: ceph-block
