chore: update var

--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -315,7 +315,7 @@ spec:
           gnetId: 23233
           revision: 4
           datasource:
-            - { name: DS_VICTORIAMETRICS, value: Prometheus }
+            - { name: DS_PROMETHEUS, value: Prometheus }
         minio:
           # renovate: depName="MinIO Dashboard"
           gnetId: 13502
