feat: add more dashboards

--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -307,6 +307,12 @@ spec:
           gnetId: 5342
           revision: 9
           datasource: Prometheus
+        ceph-usage:
+          # renovate: depName="Ceph Usage"
+          gnetId: 23246
+          revision: 1
+          datasource:
+            - { name: DS_VICTORIAMETRICS, value: Prometheus }
         host-overview:
           url: https://raw.githubusercontent.com/ceph/ceph/main/monitoring/ceph-mixin/dashboards_out/hosts-overview.json
           datasource: Prometheus
