--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
     image:
       repository: itzg/mc-router ## TODO: Change to GHCR
       tag: 1.26.0@sha256:7f2ed38d583fbfa38967265920adbe10883d48b0bc69dd6fb127660b12d8fdd0
+      imagePullPolicy: IfNotPresent
     services:
       minecraft:
         type: LoadBalancer
