--- a/kubernetes/apps/base/downloads/recyclarr/externalsecret.yaml
+++ b/kubernetes/apps/base/downloads/recyclarr/externalsecret.yaml
@@ -1,5 +1,5 @@
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: &name recyclarr-secret
