--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
       retries: 3
   values:
     image:
-      repository: itzg/mc-router ## TODO: Change to GHCR
+      repository: ghcr.io/itzg/mc-router
       tag: 1.26.1@sha256:9ebcc759d6780842799b10f5b647f4961625bbf84f08bab2d8eb49ef2b29ce8f
       pullPolicy: IfNotPresent
     services:
