feat: comment out down/up

--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -67,10 +67,10 @@ tasks:
   reboot-node:
     desc: Reboot Talos on a single node [CLUSTER=main] [HOSTNAME=required]
     cmds:
-      - task: down
+      # - task: down
       - talosctl --nodes {{.HOSTNAME}} reboot --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
       - talosctl --nodes {{.HOSTNAME}} health --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - task: up
+      # - task: up
     requires:
       vars: [CLUSTER, HOSTNAME]
     preconditions:
