--- a/kubernetes/apps/base/self-hosted/ollama/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/ollama/helmrelease.yaml
@@ -27,13 +27,14 @@ spec:
           reloader.stakater.com/auto: "true"
         containers:
           app:
-            command: ["/bin/sh"]
-            args: ["-c", "sleep infinity"]
+            # command: ["/bin/sh"]
+            # args: ["-c", "sleep infinity"]
             image:
               repository: ghcr.io/tyzbit/ollama-intel-gpu
               tag: latest
             securityContext:
               privileged: true
+              supplementalGroups: [44]
             env:
               # --- Intel GPU
               DEVICE: Arc
